# bah2026-ps6

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  cloudbuild.yaml  environment.yml  idea.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-cloudrun.yml
configs/crops/: kc_curves.yaml
dashboard/: README.md  app.js  config.js  index.html  style.css
dashboard/demo/: _generate.py  command_area.geojson  fields.geojson  rollup.json
docs/: ARCHITECTURE.md  CICD.md  CUSTOM_DOMAIN.md  DATA_FUSION.md  DEPLOYMENT.md  IRRIGATION_ADVISORY.md  MODELS.md  PLATFORM_O1.md  SATELLITE_CATALOG.md
gee/: 00_auth.py  01_optical_harmonize.py  02_sar_s1.py  03_indices_phenology.py  04_soil_moisture.py  05_crop_classification.py  06_et0_advisory.py  README.md  _auth.py
infra/: .dockerignore  Dockerfile  Dockerfile.tiler  docker-compose.yml
notebooks/: 01_quickstart_demo.ipynb  02_gee_pipeline.ipynb  README.md
scripts/: deploy_cloudrun.sh  map_domain.sh  setup_wif.sh
src/agristress/: __init__.py
src/agristress/catalog/: __init__.py  assets.py  sensors.py
src/agristress/features/: __init__.py  indices.py  phenology.py  texture.py
src/agristress/fusion/: __init__.py  datacube.py  sar_optical.py  soil_moisture.py  spatiotemporal.py
src/agristress/indexing/: __init__.py  feature_store.py  h3_index.py
src/agristress/ingestion/: __init__.py  gee_client.py  loaders.py  stac_client.py  synthetic.py
src/agristress/irrigation/: __init__.py  advisory.py  et0.py  kc.py  water_balance.py
src/agristress/models/: __init__.py  crop_classifier.py  evaluate.py  stress.py  train.py
src/agristress/pipeline/: __init__.py  cli.py  orchestrator.py
src/agristress/preprocessing/: __init__.py  harmonize.py  optical.py  sar.py
src/agristress/serving/: __init__.py  api.py  cache.py  store.py  tiler.py
tests/: test_catalog.py  test_dashboard.py  test_features.py  test_fusion.py  test_gee.py  test_indexing.py  test_ingestion.py  test_irrigation.py  test_models.py  test_pipeline.py  test_serving.py
