[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agristress"
version = "0.1.0"
description = "AI system fusing 30+ satellites for crop-type mapping, phenology-aware moisture stress detection, and 8-day irrigation advisory for canal command areas (ISRO BAH 2026 PS6)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "AgriStress / BAH 2026 Team" }]
keywords = [
    "remote-sensing",
    "geospatial",
    "earth-engine",
    "crop-classification",
    "moisture-stress",
    "irrigation-advisory",
    "sar",
    "phenology",
    "isro",
    "datacube",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core runtime dependencies (geospatial datacube stack). Heavy ML / serving / viz
# stacks live in optional extras so that `import agristress` stays lightweight.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    # --- geospatial core ---
    "earthengine-api>=0.1.390",
    "geemap>=0.32",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "xarray>=2024.2",
    "dask[array]>=2024.2",
    "zarr>=2.17",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "h3>=4.0",
    "pystac-client>=0.7",
    "stackstac>=0.5",
    "odc-stac>=0.3",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "torch>=2.2",
    "timm>=0.9",
]
serving = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "rio-tiler>=6.4",
    "titiler.core>=0.18",
    "redis>=5.0",
]
viz = [
    "folium>=0.16",
    "plotly>=5.20",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
    "types-redis>=4.6",
]
all = ["agristress[ml,serving,viz,dev]"]

[project.scripts]
agristress = "agristress.pipeline.cli:app"

[project.urls]
Homepage = "https://github.com/bah2026-team/bah2026-ps6"
Repository = "https://github.com/bah2026-team/bah2026-ps6"
Documentation = "https://github.com/bah2026-team/bah2026-ps6/blob/main/docs/ARCHITECTURE.md"

# ---------------------------------------------------------------------------
# setuptools (src layout)
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agristress = ["py.typed"]

# ---------------------------------------------------------------------------
# Ruff (lint)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["dashboard", "infra", "notebooks"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length handled by black/formatter
    "B905",  # zip() strict= not always desired on 3.11
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]          # re-exports
"tests/*" = ["S101", "N802"]      # asserts + test naming

[tool.ruff.lint.isort]
known-first-party = ["agristress"]

# ---------------------------------------------------------------------------
# Black (format)
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
/(
    dashboard
  | infra
  | notebooks
)/
'''

# ---------------------------------------------------------------------------
# Mypy (type-check)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
files = ["src"]
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = false
follow_imports = "silent"

[[tool.mypy.overrides]]
module = [
    "ee.*",
    "geemap.*",
    "rasterio.*",
    "rioxarray.*",
    "stackstac.*",
    "odc.*",
    "pystac_client.*",
    "h3.*",
    "xgboost.*",
    "lightgbm.*",
    "timm.*",
    "rio_tiler.*",
    "titiler.*",
    "folium.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services (GEE, network)",
    "gpu: marks tests requiring a GPU / torch",
]

[tool.coverage.run]
branch = true
source = ["agristress"]

[tool.coverage.report]
show_missing = true
skip_covered = true
