[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agristress"
version = "0.1.0"
description = "AI system fusing 30+ satellites for crop-type mapping, phenology-aware moisture stress detection, and 8-day irrigation advisory for canal command areas (ISRO BAH 2026 PS6)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "AgriStress / BAH 2026 Team" }]
keywords = [
    "remote-sensing",
    "geospatial",
    "earth-engine",
    "crop-classification",
    "moisture-stress",
    "irrigation-advisory",
    "sar",
    "phenology",
    "isro",
    "datacube",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core runtime dependencies — the *pure-wheel* datacube science stack that every
# module needs and that pip-installs cleanly on any CI runner (no system GDAL).
# Heavy native-geo (rasterio/geopandas), ML/DL, serving and cloud stacks live in
# optional extras below so that `pip install agristress` always succeeds and
# `import agristress` stays lightweight. scipy is here because the core science
# (fusion smoothing/unmixing, phenology curve-fitting) imports it.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
    "xarray>=2024.2",
    "h3>=4.0",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# Machine-learning models (crop classifier, stress detector). xgboost/lightgbm/
# catboost are *optional* accelerators — the code falls back to scikit-learn when
# they are absent, so they are intentionally NOT listed here as hard deps.
ml = [
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "joblib>=1.3",
]
# FastAPI serving + Typer CLI + image tiling. redis is optional (in-memory cache
# is the default backend) so it is not a hard dep.
serving = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "typer>=0.12",
    "pillow>=10.0",
]
viz = [
    "matplotlib>=3.8",
    "plotly>=5.20",
    "folium>=0.16",
]
# Native-geo stack — requires system GDAL/PROJ; modern manylinux wheels usually
# bundle them but this is kept OUT of core/test paths to avoid breaking CI runners.
geo = [
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "pystac-client>=0.7",
]
# Cloud / Earth-Engine / STAC access. All used optionally with graceful fallback
# to the offline synthetic path when absent.
cloud = [
    "earthengine-api>=0.1.390",
    "geemap>=0.32",
    "pystac-client>=0.7",
    "odc-stac>=0.3",
    "stackstac>=0.5",
    "planetary-computer>=1.0",
    "pystac>=1.10",
]
# Heavy deep-learning (optional spatio-temporal backbones). No test requires these.
dl = [
    "torch>=2.2",
    "timm>=0.9",
]
# The practical test dependency set — pure wheels that the full pytest suite needs.
# CI installs `.[test]` so the suite is green without any native-GDAL/DL packages.
test = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
    "scikit-learn>=1.4",
    "scikit-image>=0.22",
    "joblib>=1.3",
    "xarray>=2024.2",
    "h3>=4.0",
    "pyarrow>=15.0",
    "zarr>=2.17",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "typer>=0.12",
    "pillow>=10.0",
]
dev = [
    "agristress[test]",
    "ruff>=0.4",
    "mypy>=1.9",
    "black>=24.3",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]
all = ["agristress[ml,serving,viz,geo,cloud,dl,dev]"]

[project.scripts]
agristress = "agristress.pipeline.cli:app"

[project.urls]
Homepage = "https://github.com/bah2026-team/bah2026-ps6"
Repository = "https://github.com/bah2026-team/bah2026-ps6"
Documentation = "https://github.com/bah2026-team/bah2026-ps6/blob/main/docs/ARCHITECTURE.md"

# ---------------------------------------------------------------------------
# setuptools (src layout)
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agristress = ["py.typed"]

# ---------------------------------------------------------------------------
# Ruff (lint)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["dashboard", "infra", "notebooks", "gee"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line length handled by black/formatter
    "B905",   # zip() strict= not always desired on 3.11
    "RUF002", # ambiguous unicode in docstrings — intentional science notation (σ, –, ×)
    "RUF003", # ambiguous unicode in comments — intentional science notation (σ, –, ×)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]          # re-exports
"tests/*" = ["S101", "N802"]      # asserts + test naming
# Scientific modules use single-capital matrix/symbol names (X, y, F, P, L, T, ...)
# matching the remote-sensing / FAO-56 / Kalman literature and the docs formulas.
"src/agristress/features/indices.py" = ["N803", "E741"]   # EVI/SAVI "L" coefficient
"src/agristress/fusion/soil_moisture.py" = ["N803", "N806"]  # Kalman F, P, Q, R, K
"src/agristress/models/crop_classifier.py" = ["N803", "N806"]  # X (features), y (labels)
"src/agristress/models/train.py" = ["N803", "N806"]            # X, y train/test splits
"tests/test_models.py" = ["N803", "N806"]                      # X, y in fixtures

[tool.ruff.lint.isort]
known-first-party = ["agristress"]

# ---------------------------------------------------------------------------
# Black (format)
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
/(
    dashboard
  | infra
  | notebooks
)/
'''

# ---------------------------------------------------------------------------
# Mypy (type-check)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
files = ["src"]
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = false
follow_imports = "silent"

[[tool.mypy.overrides]]
module = [
    "ee.*",
    "geemap.*",
    "rasterio.*",
    "rioxarray.*",
    "stackstac.*",
    "odc.*",
    "pystac_client.*",
    "h3.*",
    "xgboost.*",
    "lightgbm.*",
    "timm.*",
    "rio_tiler.*",
    "titiler.*",
    "folium.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services (GEE, network)",
    "gpu: marks tests requiring a GPU / torch",
]

[tool.coverage.run]
branch = true
source = ["agristress"]

[tool.coverage.report]
show_missing = true
skip_covered = true
